Fixed red border on signature pad not showing

--- a/src/components/signature-area/signature-area.scss
+++ b/src/components/signature-area/signature-area.scss
@@ -13,14 +13,12 @@ signature-area {
       z-index: 10;
       margin-bottom: -6px;
     }
-    &.ng-dirty {
       &.ng-invalid {
         canvas {
           border: 4px solid map-get($colors, mes-validation-error) !important;
           box-shadow: inset 0 0px 0px 0 #a5a2a2;
         }
       }
-    }
   }
 
   .retry-button {
